change in react config

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "concurrently \"vite\" \"wait-on http://localhost:5173 && electron .\"",
     "build": "vite build",
-    "dist": "npm run build && electron-builder --win --linux"
+    "dist": "npm run build && electron-builder --win"
   },
   "build": {
     "appId": "neko-virumaandi",
