run electron in build

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "main": "electron/main.cjs",
   "scripts": {
-    "dev": "concurrently \"vite\" \"wait-on http://localhost:5173 && electron .\"",
-    "build": "vite build",
+    "dev": "vite",
+    "build": "vite build && electron .",
     "dist": "npm run build && electron-builder --win"
   },
   "build": {
