--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "dotenv": "^17.0.1",
     "firebase-admin": "^13.4.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
