--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "electron/main.cjs",
   "scripts": {
     "dev:web": "vite",
-    "dev:app": "vite build && electron .",
+    "dev:app": "vite build && cmd.exe /c winElectron\\\\node_modules\\\\\\.bin\\\\\\electron.cmd .",
+    "dev:app:linux": "vite build && electron .",
     "build:win": "vite build && electron-builder --win",
     "build:linux": "npm run build && electron-builder --linux"
   },
